[tool.poetry]
name = "tfbs"
version = "0.1.0"
description = ""
authors = ["Malcolm Perry <malcolm@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "~3.9"
MOODS-python = "^1.9.4"
argparse = "^1.4.0"
numpy = "^1.21.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
